@@ -3252,11 +3252,17 @@ Return:
 
 (defun tinytf-toc-insert-list (list)
   "Insert list of Table of Contents strings in LIST."
-  (dolist (elt list)
-    (setq elt (car elt))
-    (if (string-match "^[ \t]+" elt)
-	(insert elt "\n")       ;sub heading...
-      (insert elt "\n"))))
+  (let (top-heading-done)
+    (dolist (elt list)
+      (setq elt (car elt))
+      (if (string-match "^[ \t]+" elt)
+	  (insert elt "\n")       ;sub heading...
+	(if top-heading-done
+	    ;; Add paragraph break between heading
+	    ;; groups
+	    (insert "\n" elt "\n")
+	  (insert elt "\n"))
+	(setq top-heading-done t)))))
 
 (defun tinytf-toc (&optional arg verb)
   "Create table of contents.
@@ -3289,22 +3295,6 @@ VERB enables verbose messages."
           (ti::pmin)
           (if (stringp tinytf--heading-ignore-regexp-form)
               (flush-lines tinytf--heading-ignore-regexp-form))
-          ;; Make sure there are two newlines at the end so that
-          ;; inserted TOC is positioned nicely
-          ;; (ti::pmax)
-          ;; (when (and (looking-at "^$")
-          ;;            (save-excursion
-          ;;              (forward-line -1)
-          ;;              (not (looking-at "^$"))))
-          ;;   (insert "\n"))
-          ;;  Delete leading whitespace
-          ;;  1997-08 Disabled for now and now makes:
-          ;;
-          ;;  1.1
-          ;;    1.2
-          ;;  2.0
-          ;;    2.1
-          ;;
           (when (and toc-alist nil)
             ;;  Convert heading 2 level to heading  1
             (ti::pmin)
